Cnfigurando Mysql Db

--- a/CasaDoCodigo/Aulas/Aula1/CasaDoCodigo/appsettings.json
+++ b/CasaDoCodigo/Aulas/Aula1/CasaDoCodigo/appsettings.json
@@ -4,5 +4,8 @@
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "Default": "server=localhost;userid=root;password=root;database=casadocodigo;persistsecurityinfo=True;convert zero datetime=True"
   }
 }
