--- a/CasaDoCodigo/Aulas/Aula1/CasaDoCodigo/CasaDoCodigo.csproj
+++ b/CasaDoCodigo/Aulas/Aula1/CasaDoCodigo/CasaDoCodigo.csproj
@@ -8,7 +8,7 @@
     <PackageReference Include="EntityFramework" Version="6.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.9" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.4" />
-    <PackageReference Include="MySql.Data" Version="8.0.18" />
+    <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.18" />
   </ItemGroup>
 
   <ItemGroup>
