--- a/CasaDoCodigo/Aulas/Aula1/CasaDoCodigo/appsettings.json
+++ b/CasaDoCodigo/Aulas/Aula1/CasaDoCodigo/appsettings.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "server=localhost;userid=root;password=root;database=casadocodigo;persistsecurityinfo=True;convert zero datetime=True"
+    "Default": "server=localhost;userid=root;password=root;database=casadocodigo;"//persistsecurityinfo=True;convert zero datetime=True"
   }
 }
