--- a/CasaDoCodigo/Aulas/Aula1/CasaDoCodigo/CasaDoCodigo.csproj
+++ b/CasaDoCodigo/Aulas/Aula1/CasaDoCodigo/CasaDoCodigo.csproj
@@ -12,8 +12,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.4" />
-    <PackageReference Include="MySql.Data" Version="8.0.18" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.2.6" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql.Design" Version="1.1.2" />
   </ItemGroup>
 
   <ItemGroup>
